--- a/packages/assets/style/dialog.module.scss
+++ b/packages/assets/style/dialog.module.scss
@@ -99,8 +99,8 @@
     }
 
     .body {
-      max-height: calc(100vh - var(--header-height) - var(--footer-height));
-      overflow: auto;
+      //max-height: calc(100vh - var(--header-height) - var(--footer-height));
+      //overflow: auto;
     }
 
     .footer {
